

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Jun-2011 Jean-Marie Simonet
# [#26118] *Multibyte spaces search broken. Thanks Chris and Jonathan.

09-Jun-2011 Mark Dexter
 # [#26089] Sync admin layouts (hathor)

09-Jun-2011 Jean-Marie Simonet
 # Updating installation languages xmls to version 1.7
 #$ Deleting redundant lang string from Rev 21463
 
08-Jun-2011 Mark Dexter
 # [#24826] ACL bug in Contact component backend
 # [#25711] All Components are deleted from the Administration interface when a new Menu Type named “menu” is deleted
 # [#25865] Cannot set custom offset for the tooltip
 # [#25938] Repetition code in JHTMLImage::site()
 # [#25974] weblinks component
 # [#26067] Wrong colspan in admin/mod_latest when there are no results
 # [#26083] Update SqueezeBox to version 1.2
 # [#23410] Remove <meta name="title">
 # [#26085] *Uninstalling/discovering 4 core components kills their admin menu translations and links

08-Jun-2011 Christophe Demko
 # [#26062] gray bars in Firefox/Safari above and under the Submenue in adminlists (Rouven Weßling)
 # [#26065] Bluestork clean up (Rouven Weßling)
 # [#26097] rev 21483 - file modal.js not updated (Rouven Weßling)
 # [#26095] Follow on to 25462 for plugin uninstall (Michael Babker)

07-Jun-2011 Jean-Marie Simonet
 $ Updating site en-GB.lib_joomla.ini
 
07-Jun-2011 Christophe Demko
 + [#25409] Examples for the editor, search & system plugins. (Peter Nurse)
 # [#26041] Menu type manager slows down considerably as menu tree gets larger (Andrew Eddie)

06-Jun-2011 Mark Dexter
 + [#25977] Improve the installation (Rouven Weßling)
 + [#26046] Rename administrator/help/helpsites-1.6.xml File

06-Jun-2011 Jean-Marie Simonet