@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Id$ -->
-<extension type="component" version="1.6" method="upgrade">
+<extension type="component" version="1.7" method="upgrade">
 	<name>com_categories</name>
 		<author>Joomla! Project</author>
 	<creationDate>December 2007</creationDate>
@@ -8,7 +8,7 @@
 		<license>http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
 		<authorEmail>admin@joomla.org</authorEmail>
 		<authorUrl>www.joomla.org</authorUrl>
-		<version>1.6.0</version>
+		<version>1.7.0</version>
 		<description>COM_CATEGORIES_XML_DESCRIPTION</description>
 	<administration>
 		<files folder="admin">
