@@ -1,4 +1,5 @@
-<extension type="component" version="1.6" method="upgrade">
+<?xml version="1.0" encoding="utf-8"?>
+<extension type="component" version="1.7" method="upgrade">
 	<name>com_checkin</name>
 	<author>Joomla! Project</author>
 	<copyright>(C) 2005 - 2008 Open Source Matters. All rights reserved.
@@ -7,7 +8,7 @@
 		GNU/GPL</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>COM_CHECKIN_XML_DESCRIPTION</description>
 	<administration>
 		<files folder="admin">
