@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Id$ -->
-<extension type="component" version="1.6.0" method="upgrade">
+<extension type="component" version="1.7" method="upgrade">
 	<name>com_content</name>
 	<author>Joomla! Project</author>
 	<creationDate>April 2006</creationDate>
@@ -8,7 +8,7 @@
 	<license>GNU General Public License version 2 or later; see	LICENSE.txt</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>COM_CONTENT_XML_DESCRIPTION</description>
 
 	<files folder="site">
