@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension type="component" version="1.6.0" method="upgrade">
+<extension type="component" version="1.7" method="upgrade">
 	<name>com_search</name>
 	<author>Joomla! Project</author>
 	<creationDate>April 2006</creationDate>
@@ -9,7 +9,7 @@
 		LICENSE.txt</license>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.6.0</version>
+	<version>1.7.0</version>
 	<description>COM_SEARCH_XML_DESCRIPTION</description>
 
 	<files folder="site">
